--- a/_posts/2019-12-31-the-us-narrative-today.html
+++ b/_posts/2019-12-31-the-us-narrative-today.html
@@ -1500,107 +1500,107 @@ stories:
   domain: http://www.commercejournal.com/
   link: https://www.commercejournal.com/news/no-one-seriously-hurt-after-cars-hit-cows-on-highway/article_862ba61e-2bf4-11ea-94ad-b31605749a8c.html
 images:
-- name: trucksilo-trucksilo-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-light-dali.jpg
-- name: bluelake-blue-granite-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-blue-granite-file-00-00-00-00.jpg
-- name: locked-up-steam-lock-up-steam-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-neo-instinct.jpg
-- name: server-cloud-server-racks-door-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-gan-vogh.jpg
-- name: status-berlin-status-berlin-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-gred-mash.jpg
-- name: beach-rocks-beach-rocks-currents-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-crunch-paper.jpg
-- name: white-house-lawn-white-house-window-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-sand-paper.jpg
-- name: san-francisco-street-view-san-francisco-street-view-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-blue-brush.jpg
-- name: flower-barbed-wire-flower-barbed-wire-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-spagetti-accident.jpg
-- name: border-crossing-bordercrossing-mucha-mult.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-mucha-mult.png
-- name: bf-skinner-los-angeles-downtown-from-afar.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-los-angeles-downtown-from-afar.jpg
-- name: stories-new-79-110-800-500-0-max-0--5--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-79-110-800-500-0-max-0--5--1.jpg
-- name: docks-docks-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-far-away.jpg
-- name: old-granary-field-oldhouse-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-crafty-painting.jpg
-- name: subway-subway-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-mucha-mult.jpg
-- name: nyc-flag-nycflag-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-umberto-bocc.jpg
-- name: paris-paris-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-monet-one.jpg
-- name: white-house-whitehouse-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-purple-storm.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-light-dali.jpg
-- name: old-house-oldhouse-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-colorful-blocks.jpg
-- name: scream-IMG_8318.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-IMG_8318.jpg
-- name: flower-barbed-wire-flower-barbed-wire-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-crabapple.jpg
-- name: oldcabin-oldcabin-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-blue-granite.jpg
-- name: christianity-christianity-under-construction-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-dark-soul.jpg
-- name: nazi-invasion-downtown-125thstreet.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-downtown-125thstreet.jpg
-- name: downtown-trucksilo.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-clean-view.jpg
-- name: oldtrain-oldtrain-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-aqua.jpg
-- name: nazi-invasion-grain-ship-docking-grass.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-grain-ship-docking-grass.jpg
-- name: flower-barbed-wire-flower-barbed-wire-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-sand-paper.jpg
-- name: art-museum-art-museum-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-dark-soul.jpg
-- name: downtown-fredericksburg-atari-missle.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-atari-missle.JPG
-- name: old-church-oldchurch-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-alien-goggles.jpg
-- name: border-crossing-bordercrossing-atari-missle.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-atari-missle.png
-- name: stories-new-32-119-800-500-0-max-0--1--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-32-119-800-500-0-max-0--1--1.jpg
-- name: stalin-time-eagle-spread-tree-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-eagle-spread-tree-2.jpg
-- name: store-on-corner-oldcabin-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-sunday.jpg
-- name: old-granary-field-granaryfield-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-rainbow-festival.jpg
-- name: hollywood-building-hollywood-building-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-smoking-cigarette.jpg
-- name: san-francisco-street-view-san-francisco-street-view-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-spagetti-accident.jpg
-- name: oldroad-old-road-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-gred-mash.jpg
-- name: cargo-ship-cargo-ship-on-sea-copper-circuit-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-copper-circuit-2.jpg
-- name: oldroad-old-road-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-alien-goggles.jpg
-- name: wind-mills-windmills-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-marcel-duchamp.jpg
-- name: old-house-oldhouse-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-far-away.jpg
-- name: la-muse-british-black-cab-street.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-british-black-cab-street.jpg
-- name: blossombar-yellow-paper-file-00-00-50-62.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-yellow-paper-file-00-00-50-62.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o.jpg
-- name: castle-wall-DSC-0067-feed-people.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-feed-people.JPG
-- name: white-house-lawn-white-house-window-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-green-zuma.jpg
-- name: mediterranean-mediterranean-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-bright-sand.jpg
+- name: stalin-time-dark-tower-of-london.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-dark-tower-of-london.jpg
+- name: downtown-los-angeles-downtown-la-alien-goggles.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-alien-goggles.JPG
+- name: downtown-los-angeles-downtown-la-plentiful.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-plentiful.JPG
+- name: mediterranean-mediterranean-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-purp-paper.jpg
+- name: fence-fence-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-blue-brush.jpg
+- name: windowmountain-window-mountain-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-dali-three.jpg
+- name: razorwire-DSC-0080-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-alien-goggles.jpg
+- name: crow_space_pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_space_pizza.jpg
+- name: server-cloud-server-racks-door-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-crunch-paper.jpg
+- name: hollywood-building-hollywood-building-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-crabapple.jpg
+- name: server-cloud-server-racks-door-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-far-away.jpg
+- name: border-crossing-bordercrossing-dali-two.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-dali-two.png
+- name: oldhotel-oldhotel-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-purple-storm.jpg
+- name: copper-circuit-hollywood-sign-with-tower.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-hollywood-sign-with-tower.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-dark-dali.jpg
+- name: stalin-time-people-eating-canal.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-people-eating-canal.jpg
+- name: power-lines-power-lines-empty-space-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-post-modern.jpg
+- name: walled-garden-walled-garden-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-crunch-paper.jpg
+- name: downtown-los-angeles-downtown-la-oily-mcoilface.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-oily-mcoilface.JPG
+- name: downtown-trucksilo-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-clean-view.jpg
+- name: meadowbutterfly-meadow-butterfly-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-dark-rain.jpg
+- name: sand-hand-sand-hand-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-dark-dali.jpg
+- name: border-crossing-bordercrossing-oily-mcoilface.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-oily-mcoilface.png
+- name: lincoln-memorial-lincolnmemorial-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-blue-brush.jpg
+- name: trucksilo-trucksilo-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-umberto-bocc.jpg
+- name: old-cabin-oldcabin-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-deep-connections.jpg
+- name: oldhousecars-house-old-cars-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-sand-paper.jpg
+- name: miamibeach-miamibeach-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-aqua.jpg
+- name: status-berlin-status-berlin-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-kandinsky-bv.jpg
+- name: stalin-time-graffitti-red-hat-man.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-graffitti-red-hat-man.jpg
+- name: old-cabin-oldcabin-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-ww2-dresden.jpg
+- name: old-gas-pumps-oldgaspumps-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-ww2-dresden.jpg
+- name: fence-mexico-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-kand-two.jpg
+- name: server-cloud-server-racks-clouds-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-cinnamon-rolls.jpg
+- name: yosemite-yosemite-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-green-zuma.jpg
+- name: old-church-oldchurch-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-emily-carr.jpg
+- name: stalin-time-downtown-la_36349151230_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-downtown-la_36349151230_o.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-dali-three.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-dali-three.JPG
+- name: downtheline-downtheline-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-nazi-poster.jpg
+- name: hollywood-building-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-marcel-duchamp.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-mucha-mult.jpg
+- name: adam-smith-adam-smith-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-sand-paper.jpg
+- name: powerlines-power-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-yellow-collage.jpg
+- name: oldhouse-granaryfield-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-umberto-bocc.jpg
+- name: oldhotel-oldhotel-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-crafty-painting.jpg
+- name: san-francisco-street-view-san-francisco-street-view-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-colorful-blocks.jpg
+- name: curtain-curtain-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-bright-sand.jpg
+- name: castle-wall-DSC-0067-ww2-dresden.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-ww2-dresden.JPG
+- name: beach-rocks-beach-rocks-currents-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-diego-rivera1.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-blue-circuit-4.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-blue-circuit-4.png
+- name: oldcabin-oldcabin-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-sand-paper.jpg
 ---
 Best Ideas For Making Fun New Year's Resolutions As A Family.&nbsp;Letter To The Editor.&nbsp;Threatening Freedoms Provokes Revolt.&nbsp;Monte Vista Police Report.&nbsp;Lawyers Want State To Cover Costs Of Monitoring Inmate Care.&nbsp;Rucker Receives Promotion At Erie.&nbsp;Just Loving This Weather.&nbsp;Firearms Instructor Took Out Gunman At Texas Church Service.&nbsp;
